@@ -7,6 +7,10 @@
 
 	* Added typo3/sysext/openid extension (stub generated by kickstarter)
 	* Added PHP OpenID library to the openid extension
+	* Moved OpenID fields to palettes under the "username" fields in fe_users/be_users.
+	* Added CSH for new fields
+	* Added PHP OpenID library to the service code. Updated service class to match service type.
+	* Added code to connect to the OpenID server and request authentication.
 
 2008-09-24  Ingo Renner  <ingo@typo3.org>
 
